syntax = "proto3";

package auth_service;

service UsersService {
  rpc CreateUser (CreateUserDTO) returns (UserResponse);
  rpc Login (LoginDTO) returns (LoginResponse);
  rpc BanToken (BannedTokenDTO) returns (BannedResponse);
  rpc IsTokenBanned (BannedTokenDTO) returns (IsBannedResponse);
  rpc VerifyToken (TokenDTO) returns (VerifyTokenResponse);
  rpc GetTokenData (TokenDTO) returns (TokenDataResponse);
}

// Requests
message CreateUserDTO {
  string name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message LoginDTO {
  string email = 1;
  string password = 2;
}

message BannedTokenDTO {
  string token = 1;
}

message TokenDTO {
  string token = 1;
}

// Responses
message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message LoginResponse {
  string token = 1;     
  UserResponse user = 2;
}

message BannedResponse {
  bool is_banned = 1;
  string token = 2;
}

message IsBannedResponse {
  bool is_banned = 1;
}

message TokenDataResponse {
  string userId = 1;
}

message VerifyTokenResponse {
  bool is_valid = 1;
}

message EmptyMessage {}